# bhuztree

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.svelte  routing.ts  style.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: git_command.rs  logging.rs  main.rs  repositories.rs  serializer.rs  settings.rs  string_file_serializer.rs  toml_file_serializer.rs
src-tauri/src/commands/: errors.rs  mod.rs
src/backend/: Branch.type.ts  Calls.ts  DebugLevel.util.ts
src/components/: CancelControlButton.svelte  CustomButton.svelte  SaveControlButton.svelte
src/components/overview/: AddDistantRepository.svelte  AddLocalRepository.svelte  AddLocalRepositoryForm.svelte  AddRepositoryButtons.svelte  AddRepositoryForm.svelte  BranchControl.svelte  InputWithError.svelte  RepositoryBranches.svelte  RepositoryButton.svelte  RepositoryDetails.svelte  RepositoryOverview.svelte  RepositorySelector.svelte
src/components/settings/: DebugLevelPicker.svelte  LanguagePicker.svelte  SettingsSection.svelte
src/global/: button.type.ts  debug.ts  localization.en.ts  localization.fr.ts  localization.type.ts  localizations.ts  repositories.ts
src/layouts/: NavBar.svelte  PageContainer.svelte
src/pages/: Home.svelte  Overview.svelte  Settings.svelte
